--- a/config.json
+++ b/config.json
@@ -1,271 +1,147 @@
 {
-    
-    "notice":[
-        "경"
-    ],
+    "font_family_comment":"https://fonts.google.com/ 사이트에 검색한 폰트명 대소문자 공백까지 똑같이 그대로 작성",
+    "font_family":null,
     "structures":[
         {
-            "name":"무료토너",
-            "display_name":"무료토너로 신세계 상품권을!!!",
-            "data":[
-                [100,200,0,8],
-                [200,400,0,8],
-                [400,800,0,8],
-                [500,1000,0,8],
-                [600,1200,0,8],
-                [800,1600,0,8],
-                [-2,-1,0,5],
-                [1000,2000,2000,8],
-                [2000,4000,4000,8],
-                [4000,8000,8000,8],
-                [5000,10000,10000,8],
-                [6000,12000,12000,8],
-                [8000,16000,16000,8],
-                [-2,-1,0,5],
-                [10000,20000,20000,8],
-                [20000,40000,40000,8],
-                [40000,80000,80000,8],
-                [50000,100000,100000,8],
-                [60000,120000,120000,8],
-                [80000,160000,160000,8]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"첫 바이인 : 무료 참가"},
-                {"title":"리바인|리엔트리", "text":"무료참여권 2장"},
-                {"title":"경기방식", "text":"리바인(1회)/리엔트리"},
-                {"title":"최대 엔트리", "text":"13"},
-                {"title":"스타팅 칩(사전예약자)", "text":"10,000(+5,000)"},
-                {"title":"리바인 칩", "text":"20,000"},
-                {"title":"리엔트리 칩", "text":"20,000"},
-                {"title":"블라인드", "text":"8분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"신세계 상품권\n 10만원"},
-                {"title":"2등", "text":"무료참여권 2장"}
-            ]
-        },
-        {
-            "name":"에어팟프로",
-            "display_name":"매일 열리는 에어팟프로!",
-            "data":[
-                [100,200,0,10],
-                [200,400,0,10],
-                [400,800,0,10],
-                [500,1000,0,10],
-                [600,1200,0,10],
-                [800,1600,0,10],
-                [-2,-1,0,5],
-                [1000,2000,2000,10],
-                [2000,4000,4000,10],
-                [4000,8000,8000,10],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
-                [-2,-1,0,5],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 3장"},
-                {"title":"경기방식", "text":"리바인(2회)/리엔트리"},
-                {"title":"리바인|리엔트리", "text":"무료참여권 3장"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"15,000(+5,000)"},
-                {"title":"리바인 칩", "text":"25,000(더블 리바인 가능)"},
-                {"title":"리엔트리 칩", "text":"30,000"},
-                {"title":"블라인드", "text":"10분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"에어팟 프로"},
-                {"title":"2등", "text":"무료참여권 3장"}
-            ]
-        },
-        {
-            "name":"월간챔피언전",
-
-            "display_name":"월간챔피언 시드권 쟁탈전",
-            "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [500,1000,1000,12],
-                [600,1200,1200,12],
-                [800,1600,1600,12],
-                [-2,-1,0,5],
-                [1000,2000,2000,12],
-                [2000,4000,4000,12],
-                [4000,8000,8000,12],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
-                [-2,-1,0,5],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10],
-                [-2,-1,0,5],
-                [100000,200000,200000,10],
-                [120000,240000,240000,10],
-                [140000,280000,280000,10],
-                [150000,300000,300000,10]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 4장"},
-                {"title":"경기방식", "text":"노 리바인 / 노 애드온 / 리엔트리 가능"},
-                {"title":"리엔트리", "text":"무료참여권 4장"},
-                {"title":"최대 엔트리", "text":"15"},
-                {"title":"스타팅 칩(사전예약자)", "text":"20,000(+5,000)"},
-                {"title":"리엔트리 칩", "text":"35,000"},
-                {"title":"블라인드", "text":"12분(~lv8)/10분(lv.9~)"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"월간챔피언/n시드권 1장"},
-                {"title":"2등", "text":"무료참여권 4장"}
-            ]
-        },
-        {
-            "name":"하이롤러",
-            "display_name":"홀덤 좀 친다는 분들~ 하이롤러 가즈아\n참여자가 많을수록 프라이즈는 업업",
-            "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [500,1000,1000,12],
-                [600,1200,1200,12],
-                [800,1600,1600,12],
-                [-2,-1,0,5],
-                [1000,2000,2000,12],
-                [2000,4000,4000,12],
-                [4000,8000,8000,12],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
-                [-2,-1,0,5],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10],
-                [-2,-1,0,5],
-                [100000,200000,200000,10],
-                [120000,240000,240000,10],
-                [140000,280000,280000,10],
-                [150000,300000,300000,10]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 5장"},
-                {"title":"경기방식", "text":"노 리바인 / 노 애드온 / 리엔트리 가능"},
-                {"title":"리엔트리", "text":"무료참여권 5장"},
-                {"title":"최대 엔트리", "text":"18"},
-                {"title":"스타팅 칩", "text":"30,000"},
-                {"title":"리엔트리 칩", "text":"40,000"},
-                {"title":"블라인드", "text":"12분(~lv8)/10분(lv.9~)"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"프라이즈 50%"},
-                {"title":"2등", "text":"프라이즈 10%"}
-            ]
-        },
-        {
-            "name":"오픈 이벤트대회",
-            "display_name":"AXS 김포걸포점 오픈 이벤트대회",
+            "name":"STANDARD",
+            "display_name":"무료토너로\n신세계 상품권을?",
             "data":[
                 [100,200,0,20],
                 [200,400,0,20],
+                [300,600,0,20],
                 [400,800,0,20],
-                [500,1000,0,20],
                 [-2,-1,0,10],
-                [600,1200,1200,20],
+                [500,1000,1000,20],
+                [600,1200,1000,20],
                 [800,1600,1600,20],
                 [1000,2000,2000,20],
-                [2000,4000,4000,20],
                 [-2,-1,0,30],
+                [2000,4000,4000,15],
+                [3000,6000,6000,15],
                 [4000,8000,8000,15],
                 [5000,10000,10000,15],
+                [-2,-1,0,10],
                 [6000,12000,12000,15],
                 [8000,16000,16000,15],
-                [-2,-1,0,10],
                 [10000,20000,20000,15],
                 [20000,40000,40000,15],
+                [-2,-1,0,10],
+                [30000,60000,60000,15],
                 [40000,80000,80000,15],
                 [50000,100000,100000,15],
-                [-2,-1,0,10],
-                [60000,120000,120000,15],
-                [80000,160000,160000,15],
-                [100000,200000,200000,15],
-                [200000,400000,400000,15]
+                [60000,120000,120000,15]
             ],
             "game_options":[
-                {"title":"참여", "text":"무료참여권 5장"},
-                {"title":"경기방식", "text":"2리바인(리엔트리:2리바인 소진시 가능)"},
-                {"title":"최대 엔트리", "text":"36(최대 27명 예약 마감)"},
-                {"title":"블라인드", "text":"20분(~lv8)/15분(lv.9~)"},
-                {"title":"바인마감", "text":"Break 2 애드온"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"20,000(+10,000)"},
+                {"title":"참여", "text":"무료 참여권 3장"},
+                {"title":"경기방식", "text":"2리바인 1애드온2리바인 \n1애드온2리바인 1애드온2리바인 1애드온2리바인 1애드온"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"블라인드", "text":"10분"},
+                {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
                 {"title":"리바인", "text":"40,000"},
-                {"title":"리엔트리", "text":"40,000"},
-                {"title":"애드온", "text":"70,000"}
+                {"title":"리엔트리", "text":"50,000"},
+                {"title":"애드온", "text":"80,000"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"아이폰12 PRO MAX 256기가"},
-                {"title":"2등", "text":"아이패드 에어 4세대 64기가"},
-                {"title":"3등", "text":"에어팟 프로"},
-                {"title":"4등", "text":"무료참여권 10장"},
-                {"title":"5등", "text":"무료참여권 5장"}
+                {"title":"1등", "text":"신세계상품권10"},
+                {"title":"2등", "text":"무료참여권 5장"},
+                {"title":"3등", "text":"무료참여권 3장"},
+                {"title":"4등", "text":"무료참여권 3장"},
+                {"title":"5등", "text":"무료참여권 3장"}
             ]
         },
         {
-            "name":"SPARE 1",
+            "name":"TURBO",
+            "display_name":"매일 열리는\n에어팟프로!",
             "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [500,1000,1000,12],
-                [600,1200,1200,12],
-                [800,1600,1600,12],
-                [-2,-1,0,5],
-                [1000,2000,2000,12],
-                [2000,4000,4000,12],
-                [4000,8000,8000,12],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
-                [-2,-1,0,5],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10],
-                [-2,-1,0,5],
-                [100000,200000,200000,10],
-                [120000,240000,240000,10],
-                [140000,280000,280000,10],
-                [150000,300000,300000,10]
+                [10,20,0,20],
+                [20,40,0,20],
+                [30,60,0,20],
+                [40,80,0,20],
+                [-2,-1,0,10],
+                [50,100,100,20],
+                [60,120,100,20],
+                [80,160,160,20],
+                [100,200,200,20],
+                [-2,-1,0,30],
+                [200,400,400,15],
+                [300,600,600,15],
+                [400,800,800,15],
+                [500,1000,1000,15],
+                [-2,-1,0,10],
+                [600,1200,1200,15],
+                [800,1600,1600,15],
+                [1000,2000,2000,15],
+                [2000,4000,4000,15],
+                [-2,-1,0,10],
+                [3000,6000,6000,15],
+                [4000,8000,8000,15],
+                [5000,10000,10000,15],
+                [6000,12000,12000,15]
             ],
             "game_options":[
-                {"title":"참여", "text":"무료참여권 5장"},
-                {"title":"경기방식", "text":"노 리바인 / 노 애드온 / 리엔트리 가능"},
-                {"title":"리엔트리", "text":"무료참여권 5장"},
-                {"title":"최대 엔트리", "text":"18"},
+                {"title":"참여", "text":"무료참여권 3장"},
+                {"title":"경기방식", "text":"2리바인 1애드온(리엔드리가능"},
+                {"title":"최종 엔트리", "text":"14"},
+                {"title":"블라인드", "text":"10분"},
                 {"title":"스타팅 칩", "text":"30,000"},
-                {"title":"리엔트리 칩", "text":"40,000"},
-                {"title":"블라인드", "text":"12분(~lv8)/10분(lv.9~)"}
+                {"title":"사전예약자", "text":"+10,000"},
+                {"title":"리바인 칩", "text":"40,000"},
+                {"title":"리엔트리 칩", "text":"50,000"},
+                {"title":"애드온", "text":"80,000"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"프라이즈 50%"},
-                {"title":"2등", "text":"프라이즈 10%"}
+                {"title":"1등", "text":"무료참여권 10장"},
+                {"title":"2등", "text":"무료참여권 5장"},
+                {"title":"3등", "text":"무료참여권 3장"},
+                {"title":"4등", "text":"무료참여권 1장"},
+                {"title":"5등", "text":"무료관람권 1장"}
             ]
         },
         {
-            "name":"SPARE 2",
+            "name":"DEEPSTACK",
+
+            "display_name":"월간챔피언\n시드권 쟁탈전",
+            "data":[
+                [100,200,0,2],
+                [200,400,0,2],
+                [300,600,0,2],
+                [400,800,0,2],
+                [-2,-1,0,1],
+                [500,1000,1000,2],
+                [600,1200,1000,2],
+                [800,1600,1600,2],
+                [1000,2000,2000,2],
+                [-2,-1,0,3],
+                [2000,4000,4000,1],
+                [3000,6000,6000,1],
+                [4000,8000,8000,1],
+                [5000,10000,10000,1],
+                [-2,-1,0,1],
+                [6000,12000,12000,1],
+                [8000,16000,16000,1],
+                [10000,20000,20000,1],
+                [20000,40000,40000,1],
+                [-2,-1,0,1],
+                [30000,60000,60000,1],
+                [40000,80000,80000,1],
+                [50000,100000,100000,1],
+                [60000,120000,120000,1]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"무료참여권 3장"},
+                {"title":"경기방식", "text":"2리바인 1애드온(리엔드리가능"},
+                {"title":"최종 엔트리", "text":"14"},
+                {"title":"블라인드", "text":"10분"},
+                {"title":"스타팅 칩", "text":"30,000"},
+                {"title":"사전예약자", "text":"+10,000"},
+                {"title":"리바인 칩", "text":"40,000"},
+                {"title":"리엔트리 칩", "text":"50,000"},
+                {"title":"애드온", "text":"80,000"}
+            ]
+        },
+        {
+            "name":"CUSTOM1",
+            "display_name":"홀덤 좀 친다는 분들\n하이롤러 가즈아",
             "data":[
                 [1000,2000,0,20],
                 [2000,4000,0,20],
@@ -294,7 +170,94 @@
             ]
         },
         {
-            "name":"SPARE 3",
+            "name":"CUSTOM1 복사",
+            "data":[
+                [1000,2000,0,20],
+                [2000,4000,0,20],
+                [3000,6000,0,20],
+                [4000,8000,0,20],
+                [-2,-1,0,10],
+                [5000,10000,1000,20],
+                [6000,12000,1000,20],
+                [8000,16000,1600,20],
+                [10000,20000,2000,20],
+                [-2,-1,0,30],
+                [20000,40000,4000,15],
+                [30000,60000,6000,15],
+                [40000,80000,8000,15],
+                [50000,100000,10000,15],
+                [-2,-1,0,10],
+                [60000,120000,12000,15],
+                [80000,160000,16000,15],
+                [100000,200000,20000,15],
+                [200000,400000,40000,15],
+                [-2,-1,0,10],
+                [300000,600000,60000,15],
+                [400000,800000,80000,15],
+                [500000,1000000,100000,15],
+                [600000,1200000,120000,15]
+            ]
+        },
+        {
+            "name":"CUSTOM1 복사-복사",
+            "data":[
+                [1000,2000,0,20],
+                [2000,4000,0,20],
+                [3000,6000,0,20],
+                [4000,8000,0,20],
+                [-2,-1,0,10],
+                [5000,10000,1000,20],
+                [6000,12000,1000,20],
+                [8000,16000,1600,20],
+                [10000,20000,2000,20],
+                [-2,-1,0,30],
+                [20000,40000,4000,15],
+                [30000,60000,6000,15],
+                [40000,80000,8000,15],
+                [50000,100000,10000,15],
+                [-2,-1,0,10],
+                [60000,120000,12000,15],
+                [80000,160000,16000,15],
+                [100000,200000,20000,15],
+                [200000,400000,40000,15],
+                [-2,-1,0,10],
+                [300000,600000,60000,15],
+                [400000,800000,80000,15],
+                [500000,1000000,100000,15],
+                [600000,1200000,120000,15]
+            ]
+        },
+        {
+            "name":"CUSTOM1 복사-복사-복사",
+            "data":[
+                [1000,2000,0,20],
+                [2000,4000,0,20],
+                [3000,6000,0,20],
+                [4000,8000,0,20],
+                [-2,-1,0,10],
+                [5000,10000,1000,20],
+                [6000,12000,1000,20],
+                [8000,16000,1600,20],
+                [10000,20000,2000,20],
+                [-2,-1,0,30],
+                [20000,40000,4000,15],
+                [30000,60000,6000,15],
+                [40000,80000,8000,15],
+                [50000,100000,10000,15],
+                [-2,-1,0,10],
+                [60000,120000,12000,15],
+                [80000,160000,16000,15],
+                [100000,200000,20000,15],
+                [200000,400000,40000,15],
+                [-2,-1,0,10],
+                [300000,600000,60000,15],
+                [400000,800000,80000,15],
+                [500000,1000000,100000,15],
+                [600000,1200000,120000,15]
+            ]
+        },
+        {
+            "name":"SPEED",
             "data":[
                 [1000,2000,0,1],
                 [2000,4000,0,1],
@@ -313,7 +276,7 @@
             ]
         },
         {
-            "name":"SPARE 4",
+            "name":"LONG",
             "data":[
                 [100,0,0,1],
                 [200,0,0,1],
@@ -392,7 +355,7 @@
             ]
         },
         {
-            "name":"SPARE 5",
+            "name":"SUPER SHORT",
             "data":[
                 [1000,2000,0,"5"],
                 [2000,4000,0,"5"],
@@ -400,14 +363,7 @@
                 [5000,10000,1000,"10"],
                 [6000,12000,1000,"10"],
                 [-2,-1,0,"10"],
-                [20000,40000,4000,"10"],
-                [30000,60000,6000,"10"],
-                [-2,-1,0,"10"],
-                [60000,120000,12000,"10"],
-                [80000,160000,16000,"10"],
-                [-2,-1,0,"10"],
-                [300000,600000,60000,"10"],
-                [400000,800000,80000,"10"]
+                [20000,40000,4000,"10"]
             ]
         }
     ]
