--- a/config.json
+++ b/config.json
@@ -6,76 +6,69 @@
     "structures":[
         {
             "name":"무료토너",
-            "display_name":"무료토너로 신세계 상품권을!!!",
+            "display_name":"무료토너!!!",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
                 [400,800,0,8],
                 [500,1000,0,8],
-                [600,1200,0,8],
-                [800,1600,0,8],
+                [1000,2000,0,8],
+                [2000,4000,0,8],
+                [4000,8000,0,8],
                 [-2,-1,0,5],
-                [1000,2000,2000,8],
-                [2000,4000,4000,8],
-                [4000,8000,8000,8],
                 [5000,10000,10000,8],
-                [6000,12000,12000,8],
                 [8000,16000,16000,8],
-                [-2,-1,0,5],
                 [10000,20000,20000,8],
                 [20000,40000,40000,8],
-                [40000,80000,80000,8],
-                [50000,100000,100000,8],
-                [60000,120000,120000,8],
-                [80000,160000,160000,8]
+                [30000,60000,60000,8],
+                [40000,800000,80000,8],
+                [50000,100000,100000,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"첫 바이인 : 무료 참가"},
+                {"title":"참여", "text":"첫 바이인 : 무료(선착순)"},
                 {"title":"리바인|리엔트리", "text":"무료참여권 2장"},
                 {"title":"경기방식", "text":"리바인(1회)"},
                 {"title":"최대 엔트리", "text":"11"},
                 {"title":"스타팅 칩(사전예약자)", "text":"10,000(+5,000)"},
                 {"title":"리바인 칩", "text":"20,000"},
-                {"title":"리엔트리 칩", "text":"20,000"},
+                {"title":"레지마감", "text":"2 break 전까지"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"신세계 상품권\n 10만원"},
-                {"title":"2등", "text":"무료참여권 2장"}
+                {"title":"1등", "text":"신세계상품권 10만원"}
             ]
         },
         {
-            "name":"에어팟프로",
-            "display_name":"매일 열리는 에어팟프로!",
+            "name":"무참 3장",
+            "display_name":"무료참여권 3장(Prize 60%)",
             "data":[
-                [100,200,0,10],
-                [200,400,0,10],
-                [400,800,0,10],
-                [500,1000,0,10],
-                [600,1200,0,10],
-                [800,1600,0,10],
+                [100,200,0,9],
+                [200,400,0,9],
+                [400,800,0,9],
+                [500,1000,0,9],
+                [600,1200,0,9],
+                [800,1600,0,9],
                 [-2,-1,0,5],
-                [1000,2000,2000,10],
-                [2000,4000,4000,10],
-                [4000,8000,8000,10],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
+                [1000,2000,2000,9],
+                [2000,4000,4000,9],
+                [4000,8000,8000,9],
+                [5000,10000,10000,9],
+                [6000,12000,12000,9],
+                [8000,16000,16000,9],
                 [-2,-1,0,5],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10]
+                [10000,20000,20000,9],
+                [20000,40000,40000,9],
+                [40000,80000,80000,9],
+                [50000,100000,100000,9],
+                [60000,120000,120000,9],
+                [80000,160000,160000,9]
             ],
             "game_options":[
                 {"title":"참여", "text":"무료참여권 3장"},
-                {"title":"경기방식", "text":"리바인(2회)/리엔트리"},
-                {"title":"리바인|리엔트리", "text":"무료참여권 3장"},
+                {"title":"경기방식", "text":"리바인(1회)"},
                 {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"15,000(+5,000)"},
-                {"title":"리바인 칩", "text":"25,000(더블 리바인 가능)"},
+                {"title":"스타팅 칩(사전예약자)", "text":"20,000(+5,000)"},
+                {"title":"리바인 칩", "text":"35,000"},
                 {"title":"리엔트리 칩", "text":"30,000"},
                 {"title":"블라인드", "text":"10분"}
             ],
