--- a/config.json
+++ b/config.json
@@ -31,11 +31,11 @@
                 {"title":"최대 엔트리", "text":"11"},
                 {"title":"스타팅 칩(사전예약자)", "text":"10,000(+5,000)"},
                 {"title":"리바인 칩", "text":"20,000"},
-                {"title":"레지마감", "text":"2 break 전까지"},
+                {"title":"레지마감", "text":"1 break 전까지"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"신세계상품권 10만원 /n 무료참여권 10장"}
+                {"title":"1등", "text":"신세계상품권 10만원\nor 무료참여권 10장"}
             ]
         },
         {
@@ -69,7 +69,7 @@
                 {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅 칩(사전예약자)", "text":"20,000(+5,000)"},
                 {"title":"리바인 칩", "text":"35,000"},
-                {"title":"레지마감", "text":"2 break 전까지"},
+                {"title":"레지마감", "text":"1 break 전까지"},
                 {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
             ],
             "giveaway":[
@@ -107,7 +107,7 @@
                 {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅 칩(사전예약자)", "text":"30,000(+5,000)"},
                 {"title":"리바인 칩", "text":"45,000"},
-                {"title":"레지마감", "text":"2 break 전까지"},
+                {"title":"레지마감", "text":"1 break 전까지"},
                 {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
             ],
             "giveaway":[
@@ -145,7 +145,7 @@
                 {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅 칩(사전예약자)", "text":"40,000(+10,000)"},
                 {"title":"리바인 칩", "text":"70,000"},
-                {"title":"레지마감", "text":"2 break 전까지"},
+                {"title":"레지마감", "text":"1 break 전까지"},
                 {"title":"블라인드", "text":"12분(칩체인지 후 10분)"}
             ],
             "giveaway":[
@@ -183,7 +183,7 @@
                 {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅 칩(사전예약자)", "text":"50,000(+10,000)"},
                 {"title":"리바인 칩", "text":"80,000"},
-                {"title":"레지마감", "text":"2 break 전까지"},
+                {"title":"레지마감", "text":"1 break 전까지"},
                 {"title":"블라인드", "text":"12분(칩체인지 후 10분)"}
             ],
             "giveaway":[
@@ -222,7 +222,7 @@
                 {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
                 {"title":"리바인 칩", "text":"60,000"},
-                {"title":"레지마감", "text":"2 break 전까지"},
+                {"title":"레지마감", "text":"1 break 전까지"},
                 {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
             ],
             "giveaway":[
