--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "structures":[
         {
             "name":"무료토너",
-            "display_name":"무료토너!!!",
+            "display_name":"무료토너!!!!",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
