--- a/config.json
+++ b/config.json
@@ -76,7 +76,7 @@
         },
         {
             "name":"무참 5장",
-            "display_name":"무료참여권 5장(Prize 70%)",
+            "display_name":"무료참여권 5장",
             "data":[
                 [100,200,0,10],
                 [200,400,0,10],
@@ -108,12 +108,12 @@
                 {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
             ],
             "giveaway":[
-                {"title":"시상", "text":"Prize 70%"}
+                {"title":"시상", "text":"500,000 GTD"}
             ]
         },
         {
             "name":"무참 10장",
-            "display_name":"무료참여권 10장(Prize 70%)",
+            "display_name":"무료참여권 10장",
             "data":[
                 [100,200,0,12],
                 [200,400,0,12],
