--- a/config.json
+++ b/config.json
@@ -115,12 +115,12 @@
             "name":"무참 10장",
             "display_name":"무료참여권 10장",
             "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [500,1000,0,12],
-                [800,1600,0,12],
-                [1000,2000,0,12],
+                [100,200,0,10],
+                [200,400,0,10],
+                [400,800,0,10],
+                [500,1000,0,10],
+                [800,1600,0,10],
+                [1000,2000,0,10],
                 [-2,-1,0,5],
                 [2000,4000,4000,10],
                 [4000,8000,8000,10],
@@ -141,8 +141,8 @@
                 {"title":"경기방식", "text":"리바인(1회)"},
                 {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
-                {"title":"리바인 칩", "text":"60,000"},
-                {"title":"블라인드", "text":"12분(칩체인지 후 10분)"}
+                {"title":"리바인 칩", "text":"50,000"},
+                {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
                 {"title":"시상", "text":"Prize 70%"}
