--- a/config.json
+++ b/config.json
@@ -16,21 +16,21 @@
                 [2000,4000,0,8],
                 [4000,8000,0,8],
                 [-2,-1,0,5],
-                [5000,10000,10000,8],
-                [8000,16000,16000,8],
-                [10000,20000,20000,8],
-                [20000,40000,40000,8],
-                [30000,60000,60000,8],
-                [40000,800000,80000,8],
-                [50000,100000,100000,8]
+                [5000,10000,0,8],
+                [8000,16000,0,8],
+                [10000,20000,0,8],
+                [20000,40000,0,8],
+                [30000,60000,0,8],
+                [40000,800000,0,8],
+                [50000,100000,0,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"첫 바이인 : 무료(선착순)"},
+                {"title":"참여", "text":"첫 바이인 : 무료\n(선착순)"},
                 {"title":"리바인", "text":"무료참여권 2장"},
                 {"title":"경기방식", "text":"리바인(1회)"},
                 {"title":"최대 엔트리", "text":"11"},
-                {"title":"스타팅 칩(사전예약자)", "text":"10,000(+5,000)"},
-                {"title":"리바인 칩", "text":"25,000"},
+                {"title":"스타팅 칩(사전예약자)", "text":"15,000(+5,000)"},
+                {"title":"리바인 칩", "text":"30,000"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
@@ -273,46 +273,42 @@
             ]
         },
         {
-            "name":"SPARE 1",
+            "name":"3만 프라이즈 100%",
+            "display_name":"3만 프라이즈 100%",
             "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [500,1000,1000,12],
-                [600,1200,1200,12],
-                [800,1600,1600,12],
+                [100,200,0,10],
+                [200,400,0,10],
+                [400,800,0,10],
+                [500,1000,0,10],
+                [800,1600,0,10],
+                [1000,2000,0,10],
+                [-2,-1,0,10],
+                [2000,4000,2000,10],
+                [4000,8000,4000,10],
+                [5000,10000,5000,10],
+                [8000,16000,8000,10],
+                [10000,20000,10000,10],
+                [20000,40000,20000,10],
+                [30000,60000,30000,10],
                 [-2,-1,0,5],
-                [1000,2000,2000,12],
-                [2000,4000,4000,12],
-                [4000,8000,8000,12],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
-                [-2,-1,0,5],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [40000,80000,80000,10],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [80000,160000,160000,10],
-                [-2,-1,0,5],
-                [100000,200000,200000,10],
-                [120000,240000,240000,10],
-                [140000,280000,280000,10],
-                [150000,300000,300000,10]
+                [40000,80000,40000,10],
+                [50000,100000,50000,10],
+                [60000,120000,60000,10],
+                [80000,160000,80000,10],
+                [100000,200000,100000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"무료참여권 5장"},
-                {"title":"경기방식", "text":"노 리바인 / 노 애드온 / 리엔트리 가능"},
-                {"title":"리엔트리", "text":"무료참여권 5장"},
-                {"title":"최대 엔트리", "text":"18"},
-                {"title":"스타팅 칩", "text":"30,000"},
-                {"title":"리엔트리 칩", "text":"40,000"},
-                {"title":"블라인드", "text":"12분(~lv8)/10분(lv.9~)"}
+                {"title":"참여", "text":"무료참여권 3장"},
+                {"title":"리엔트리", "text":"무료참여권 3장"},
+                {"title":"애드온", "text":"무료참여권 3장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"스타팅 칩", "text":"30,000(+5,000)"},
+                {"title":"리엔트리 칩", "text":"50,000"},
+                {"title":"애드온 칩", "text":"70,000"},
+                {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"프라이즈 50%"},
-                {"title":"2등", "text":"프라이즈 10%"}
+                {"title":"1등", "text":"프라이즈 50%"}
             ]
         }
     ]
