--- a/config.json
+++ b/config.json
@@ -46,25 +46,24 @@
                 [400,800,0,10],
                 [600,1200,0,10],
                 [800,1600,0,10],
-                [-2,-1,0,5],
                 [1000,2000,2000,10],
+                [-2,-1,0,5],
                 [2000,4000,4000,10],
                 [2500,5000,5000,10],
                 [3000,6000,6000,10],
                 [4000,8000,8000,10],
+                [5000,10000,10000,10],
+                [6000,12000,12000,10],
                 [-2,-1,0,10],
-                [5000,10000,10000,8],
-                [6000,12000,12000,8],
                 [8000,16000,16000,8],
                 [10000,20000,20000,8],
                 [15000,30000,30000,8],
-                [-2,-1,0,5],
                 [20000,40000,40000,8],
                 [30000,60000,60000,8],
                 [40000,80000,80000,8],
+                [-2,-1,0,5],
                 [50000,100000,100000,8],
                 [60000,120000,120000,8],
-                [-2,-1,0,5],
                 [80000,160000,160000,8],
                 [100000,200000,200000,8],
                 [150000,300000,300000,8],
@@ -74,10 +73,10 @@
             "game_options":[
                 {"title":"참여", "text":"매장이용권 3장"},
                 {"title":"최대 엔트리", "text":"20"},
-                {"title":"바인마감", "text":"2 break"},
+                {"title":"레지마감", "text":"레벨 10 까지"},
                 {"title":"스타팅칩", "text":"30,000"},
                 {"title":"리엔트리칩", "text":"40,000"},
-                {"title":"블라인드", "text":"10분(2 break 8분)"}
+                {"title":"블라인드", "text":"10분(2 break 후 8분)"}
             ],
             "giveaway":[
                 {"title":"1등", "text":"260,000 GTD"},
@@ -87,6 +86,52 @@
         {
             "name":"이용권 5장",
             "display_name":"매장이용권 5장(Prize 65%)",
+            "data":[
+                [100,200,0,10],
+                [200,400,0,10],
+                [400,800,0,10],
+                [600,1200,0,10],
+                [800,1600,0,10],
+                [1000,2000,2000,10],
+                [-2,-1,0,5],
+                [2000,4000,4000,10],
+                [2500,5000,5000,10],
+                [3000,6000,6000,10],
+                [4000,8000,8000,10],
+                [5000,10000,10000,10],
+                [6000,12000,12000,10],
+                [-2,-1,0,10],
+                [8000,16000,16000,10],
+                [10000,20000,20000,10],
+                [15000,30000,30000,10],
+                [20000,40000,40000,10],
+                [30000,60000,60000,10],
+                [40000,80000,80000,10],
+                [-2,-1,0,5],
+                [50000,100000,100000,10],
+                [60000,120000,120000,10],
+                [80000,160000,160000,10],
+                [100000,200000,200000,10],
+                [150000,300000,300000,10],
+                [200000,400000,400000,10],
+                [250000,500000,500000,10]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"매장이용권 5장"},
+                {"title":"최대 엔트리", "text":"20"},
+                {"title":"바인마감", "text":"2 break"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"리엔트리칩", "text":"70,000"},
+                {"title":"블라인드", "text":"10분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"450,000 GTD"},
+                {"title":"2등", "text":"200,000 GTD"}
+            ]
+        },
+        {
+            "name":"이용권 10장",
+            "display_name":"매장이용권 10장(Prize 70%)",
             "data":[
                 [100,200,0,12],
                 [200,400,0,12],
@@ -105,13 +150,12 @@
                 [8000,16000,16000,10],
                 [10000,20000,20000,10],
                 [15000,30000,30000,10],
-                [-2,-1,0,5],
                 [20000,40000,40000,10],
+                [-2,-1,0,5],
                 [30000,60000,60000,10],
                 [40000,80000,80000,10],
                 [50000,100000,100000,10],
                 [60000,120000,120000,10],
-                [-2,-1,0,5],
                 [80000,160000,160000,10],
                 [100000,200000,200000,10],
                 [150000,300000,300000,10],
@@ -119,59 +163,12 @@
                 [250000,500000,500000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"매장이용권 5장"},
-                {"title":"최대 엔트리", "text":"20"},
-                {"title":"바인마감", "text":"2 break"},
-                {"title":"스타팅칩", "text":"50,000"},
-                {"title":"리엔트리칩", "text":"70,000"},
-                {"title":"블라인드", "text":"12분(2 break 10분)"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"450,000 GTD"},
-                {"title":"2등", "text":"200,000 GTD"}
-            ]
-        },
-        {
-            "name":"이용권 10장",
-            "display_name":"매장이용권 10장(Prize 70%)",
-            "data":[
-                [100,200,0,15],
-                [200,400,0,15],
-                [400,800,0,15],
-                [600,1200,0,15],
-                [800,1600,0,15],
-                [-2,-1,0,5],
-                [1000,2000,2000,15],
-                [2000,4000,4000,15],
-                [2500,5000,5000,15],
-                [3000,6000,6000,15],
-                [4000,8000,8000,15],
-                [-2,-1,0,10],
-                [5000,10000,10000,12],
-                [6000,12000,12000,12],
-                [8000,16000,16000,12],
-                [10000,20000,20000,12],
-                [15000,30000,30000,12],
-                [-2,-1,0,5],
-                [20000,40000,40000,12],
-                [30000,60000,60000,12],
-                [40000,80000,80000,12],
-                [50000,100000,100000,12],
-                [60000,120000,120000,12],
-                [-2,-1,0,5],
-                [80000,160000,160000,12],
-                [100000,200000,200000,12],
-                [150000,300000,300000,12],
-                [200000,400000,400000,12],
-                [250000,500000,500000,12]
-            ],
-            "game_options":[
                 {"title":"참여", "text":"매장이용권 10장"},
                 {"title":"최대 엔트리", "text":"20"},
                 {"title":"바인마감", "text":"2 break"},
                 {"title":"스타팅칩", "text":"80,000"},
                 {"title":"리엔트리칩", "text":"100,000"},
-                {"title":"블라인드", "text":"15분(2 break 12분)"}
+                {"title":"블라인드", "text":"12분(2 break 10분)"}
             ],
             "giveaway":[
                 {"title":"1등", "text":"800,000 GTD"},
