--- a/config.json
+++ b/config.json
@@ -34,7 +34,8 @@
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"신세계상품권 10만원\nor 매장이용권 12장"}
+                {"title":"1등", "text":"신세계상품권 10만원\nor 매장이용권 12장"},
+                {"title":"2등", "text":"매장이용권 2장"}
             ]
         },
         {
