--- a/config.json
+++ b/config.json
@@ -66,6 +66,8 @@
                 {"title":"블라인드", "text":"9분"}
             ],
             "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
@@ -99,6 +101,8 @@
                 {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
@@ -165,8 +169,8 @@
                 {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"월챔 시드권 1장"},
-                {"title":"2등", "text":"무료참여권 4장"}
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
