--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"신세계상품권 10만원"},
+                {"title":"1등", "text":"신세계상품권 10만원"}
             ]
         },
         {
@@ -136,6 +136,8 @@
                 {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
