--- a/config.json
+++ b/config.json
@@ -8,28 +8,28 @@
             "name":"무료토너",
             "display_name":"무료토너!!!!",
             "data":[
-                [100,200,0,8],
-                [200,400,0,8],
-                [400,800,0,8],
-                [600,1200,0,8],
-                [800,1600,0,8],
+                [100,200,0,7],
+                [200,400,0,7],
+                [400,800,0,7],
+                [600,1200,0,7],
+                [800,1600,0,7],
                 [-2,-1,0,5],
-                [1000,2000,0,8],
-                [2000,4000,0,8],
-                [4000,8000,0,8],
-                [6000,12000,0,8],
-                [8000,16000,0,8],
+                [1000,2000,0,7],
+                [2000,4000,0,7],
+                [4000,8000,0,7],
+                [6000,12000,0,7],
+                [8000,16000,0,7],
                 [-2,-1,0,5],
-                [10000,20000,0,8],
-                [20000,40000,0,8],
-                [30000,60000,0,8],
-                [40000,80000,0,8],
-                [50000,100000,0,8]
+                [10000,20000,0,7],
+                [20000,40000,0,7],
+                [30000,60000,0,7],
+                [40000,80000,0,7],
+                [50000,100000,0,7]
             ],
             "game_options":[
                 {"title":"참여", "text":"바이인 : 무료"},
-                {"title":"스타팅 칩", "text":"20,000"},
-                {"title":"블라인드", "text":"8분"}
+                {"title":"스타팅 칩", "text":"15,000"},
+                {"title":"블라인드", "text":"7분"}
             ],
             "giveaway":[
                 {"title":"1등", "text":"신세계상품권 10만원"}
@@ -59,10 +59,11 @@
             ],
             "game_options":[
                 {"title":"참여", "text":"매장이용권 3장"},
-                {"title":"최대 엔트리", "text":"20"},
+                {"title":"리바인", "text":"1회"},
+                {"title":"최대 엔트리", "text":"15"},
                 {"title":"레지마감", "text":"레벨 10 까지"},
-                {"title":"스타팅칩", "text":"30,000"},
-                {"title":"리엔트리칩", "text":"40,000"},
+                {"title":"스타팅칩", "text":"20,000"},
+                {"title":"리바인", "text":"40,000"},
                 {"title":"블라인드", "text":"9분"}
             ],
             "giveaway":[
