--- a/config.json
+++ b/config.json
@@ -212,12 +212,12 @@
             "game_options":[
                 {"title":"참여", "text":"첫바인 무료/리바인,리엔트리 5장"},
                 {"title":"경기방식", "text":"2리바인 , 애드온"},
-                {"title":"최대 엔트리", "text":"36"},
+                {"title":"최대 엔트리", "text":"40"},
                 {"title":"블라인드", "text":"12분/10분(애드온 후)"},
                 {"title":"바인마감", "text":"10레벨 레지마감"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"30,000(+10,000)"},
-                {"title":"1리바인", "text":"50,000"},
-                {"title":"2리바인", "text":"60,000"},
+                {"title":"스타팅 칩(사전예약자 )", "text":"30,000"},
+                {"title":"1리바인", "text":"40,000"},
+                {"title":"2리바인", "text":"50,000"},
                 {"title":"애드온", "text":"100,000"}
             ],
             "giveaway":[
