--- a/config.json
+++ b/config.json
@@ -32,12 +32,12 @@
                 {"title":"블라인드", "text":"7분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"신세계상품권 10만원"}
+                {"title":"1등", "text":"alldone 식음료쿠폰 5장"}
             ]
         },
         {
             "name":"이용권 3장",
-            "display_name":"매장이용권 3장(Prize 80%)",
+            "display_name":"식음료 쿠폰 3장(Prize 70%)",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -58,21 +58,22 @@
                 [50000,100000,0,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"매장이용권 3장"},
+                {"title":"참여", "text":"식음료 쿠폰 3장"},
                 {"title":"최대 엔트리", "text":"20"},
-                {"title":"레지마감", "text":"레벨 10 까지"},
                 {"title":"스타팅칩", "text":"30,000"},
-                {"title":"리바인", "text":"40,000"},
+                {"title":"1 리엔트리", "text":"40,000"},
+                {"title":"2 리엔트리", "text":"60,000"},
+                {"title":"레지마감", "text":"레벨 11"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
+                {"title":"1등", "text":"30만(50%)"},
+                {"title":"2등", "text":"12만(20%)"}
             ]
         },
         {
             "name":"이용권 5장",
-            "display_name":"매장이용권 5장(Prize 80%)",
+            "display_name":"식음료 쿠폰 5장(Prize 70%)",
             "data":[
                 [100,200,0,9],
                 [200,400,0,9],
@@ -93,21 +94,22 @@
                 [50000,100000,0,9]
             ],
             "game_options":[
-                {"title":"참여", "text":"매장이용권 5장"},
-                {"title":"최대 엔트리", "text":"16"},
-                {"title":"레지마감", "text":"레벨 10 까지"},
-                {"title":"스타팅칩", "text":"50,000"},
-                {"title":"리엔트리칩", "text":"60,000"},
+                {"title":"참여", "text":"식음료 쿠폰 5장"},
+                {"title":"최대 엔트리", "text":"18"},
+                {"title":"스타팅칩", "text":"40,000"},
+                {"title":"1 리엔트리", "text":"50,000"},
+                {"title":"2 리엔트리", "text":"70,000"},
+                {"title":"레지마감", "text":"레벨 11"},
                 {"title":"블라인드", "text":"9분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
+                {"title":"1등", "text":"45만(50%)"},
+                {"title":"2등", "text":"18만(20%)"}
             ]
         },
         {
             "name":"이용권 10장",
-            "display_name":"매장이용권 10장(Prize 80%)",
+            "display_name":"식음료 쿠폰 10장(Prize 70%)",
             "data":[
                 [100,200,0,10],
                 [200,400,0,10],
@@ -128,16 +130,17 @@
                 [50000,100000,0,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"매장이용권 10장"},
-                {"title":"최대 엔트리", "text":"15"},
-                {"title":"레지마감", "text":"레벨 10 까지"},
+                {"title":"참여", "text":"식음료 쿠폰 10장"},
+                {"title":"최대 엔트리", "text":"16"},
                 {"title":"스타팅칩", "text":"80,000"},
-                {"title":"리엔트리칩", "text":"100,000"},
+                {"title":"1 리엔트리", "text":"100,000"},
+                {"title":"2 리엔트리", "text":"120,000"},
+                {"title":"레지마감", "text":"레벨 11"},
                 {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
+                {"title":"1등", "text":"80만(50%)"},
+                {"title":"2등", "text":"32만(20%)"}
             ]
         },
         {
