--- a/config.json
+++ b/config.json
@@ -8,28 +8,61 @@
             "name":"무료토너",
             "display_name":"무료토너!!!!",
             "data":[
-                [100,200,0,7],
-                [200,400,0,7],
-                [400,800,0,7],
-                [600,1200,0,7],
-                [800,1600,0,7],
+                [100,200,0,6],
+                [200,400,0,6],
+                [400,800,0,6],
+                [600,1200,0,6],
+                [800,1600,0,6],
                 [-2,-1,0,5],
-                [1000,2000,0,7],
-                [2000,4000,0,7],
-                [4000,8000,0,7],
-                [6000,12000,0,7],
-                [8000,16000,0,7],
+                [1000,2000,0,6],
+                [2000,4000,0,6],
+                [4000,8000,0,6],
+                [6000,12000,0,6],
+                [8000,16000,0,6],
                 [-2,-1,0,5],
-                [10000,20000,0,7],
-                [20000,40000,0,7],
-                [30000,60000,0,7],
-                [40000,80000,0,7],
-                [50000,100000,0,7]
+                [10000,20000,0,6],
+                [20000,40000,0,6],
+                [30000,60000,0,6],
+                [40000,80000,0,6],
+                [50000,100000,0,6]
             ],
             "game_options":[
                 {"title":"참여", "text":"바이인 : 무료"},
                 {"title":"스타팅 칩", "text":"10,000"},
-                {"title":"블라인드", "text":"7분"}
+                {"title":"블라인드", "text":"6분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"식음료쿠폰 5장"}
+            ]
+        },
+        {
+            "name":"100% 프라이즈 ",
+            "display_name":"100% 프라이즈!",
+            "data":[
+                [100,200,0,6],
+                [200,400,0,6],
+                [400,800,0,6],
+                [600,1200,0,6],
+                [800,1600,0,6],
+                [-2,-1,0,5],
+                [1000,2000,0,6],
+                [2000,4000,0,6],
+                [4000,8000,0,6],
+                [6000,12000,0,6],
+                [8000,16000,0,6],
+                [-2,-1,0,5],
+                [10000,20000,0,6],
+                [20000,40000,0,6],
+                [30000,60000,0,6],
+                [40000,80000,0,6],
+                [50000,100000,0,6]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"바이인 : 1장"},
+                {"title":"스타팅 칩", "text":"15,000"},
+                {"title":"얼리(예약자)", "text":"+5,000"},
+                {"title":"리엔트리", "text":"30,000"},
+                {"title":"블라인드", "text":"6분"}
             ],
             "giveaway":[
                 {"title":"1등", "text":"alldone 식음료쿠폰 5장"}
@@ -37,7 +70,7 @@
         },
         {
             "name":"이용권 3장",
-            "display_name":"식음료 쿠폰 3장(Prize 70%)",
+            "display_name":"식음료 쿠폰 3장(Prize 75%)",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -67,13 +100,13 @@
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"30만(50%)"},
-                {"title":"2등", "text":"12만(20%)"}
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
             "name":"이용권 5장",
-            "display_name":"식음료 쿠폰 5장(Prize 70%)",
+            "display_name":"식음료 쿠폰 5장(Prize 75%)",
             "data":[
                 [100,200,0,9],
                 [200,400,0,9],
@@ -95,21 +128,22 @@
             ],
             "game_options":[
                 {"title":"참여", "text":"식음료 쿠폰 5장"},
-                {"title":"최대 엔트리", "text":"18"},
+                {"title":"최대 엔트리", "text":"16"},
                 {"title":"스타팅칩", "text":"40,000"},
-                {"title":"1 리엔트리", "text":"50,000"},
+                {"title":"얼리(예약자)", "text":"+10,000"},
+                {"title":"1 리엔트리", "text":"60,000"},
                 {"title":"2 리엔트리", "text":"70,000"},
                 {"title":"레지마감", "text":"레벨 11"},
                 {"title":"블라인드", "text":"9분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"45만(50%)"},
-                {"title":"2등", "text":"18만(20%)"}
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
             "name":"이용권 10장",
-            "display_name":"식음료 쿠폰 10장(Prize 70%)",
+            "display_name":"식음료 쿠폰 10장(Prize 75%)",
             "data":[
                 [100,200,0,10],
                 [200,400,0,10],
@@ -139,8 +173,8 @@
                 {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"80만(50%)"},
-                {"title":"2등", "text":"32만(20%)"}
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
