--- a/config.json
+++ b/config.json
@@ -39,23 +39,23 @@
             "name":"100% 프라이즈 ",
             "display_name":"100% 프라이즈!",
             "data":[
-                [100,200,0,5],
-                [200,400,0,5],
-                [400,800,0,5],
-                [600,1200,0,5],
-                [800,1600,0,5],
+                [100,200,0,6],
+                [200,400,0,6],
+                [400,800,0,6],
+                [600,1200,0,6],
+                [800,1600,0,6],
                 [-2,-1,0,5],
-                [1000,2000,0,5],
-                [2000,4000,0,5],
-                [4000,8000,0,5],
-                [6000,12000,0,5],
-                [8000,16000,0,5],
+                [1000,2000,0,6],
+                [2000,4000,0,6],
+                [4000,8000,0,6],
+                [6000,12000,0,6],
+                [8000,16000,0,6],
                 [-2,-1,0,5],
-                [10000,20000,0,5],
-                [20000,40000,0,5],
-                [30000,60000,0,5],
-                [40000,80000,0,5],
-                [50000,100000,0,5]
+                [10000,20000,0,6],
+                [20000,40000,0,6],
+                [30000,60000,0,6],
+                [40000,80000,0,6],
+                [50000,100000,0,6]
             ],
             "game_options":[
                 {"title":"참여", "text":"바이인 : 1장"},
@@ -198,6 +198,43 @@
                 [30000,60000,0,10],
                 [40000,80000,0,10],
                 [50000,100000,0,10]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"무료참여권 4장"},
+                {"title":"경기방식", "text":"리바인(1회)"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
+                {"title":"리바인 칩", "text":"60,000"},
+                {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
+            ]
+        },
+        {
+            "name":"이용권 20장",
+            "display_name":"식음료 쿠폰 20장",
+            "data":[
+                [100,200,0,12],
+                [200,400,0,12],
+                [400,800,0,12],
+                [600,1200,0,12],
+                [800,1600,0,12],
+                [-2,-1,0,5],
+                [1000,2000,0,12],
+                [2000,4000,0,12],
+                [4000,8000,0,12],
+                [6000,12000,0,12],
+                [8000,16000,0,12],
+                [-2,-1,0,5],
+                [10000,20000,0,12],
+                [20000,40000,0,12],
+                [30000,60000,0,12],
+                [40000,80000,0,12],
+                [50000,100000,0,12],
+                [60000,120000,0,12],
+                [70000,140000,0,12]
             ],
             "game_options":[
                 {"title":"참여", "text":"무료참여권 4장"},
