--- a/config.json
+++ b/config.json
@@ -187,6 +187,52 @@
             "name":"10만 80%",
             "display_name":"10만 80% 프라이즈",
             "data":[
+                [100,200,0,7],
+                [200,400,0,7],
+                [400,800,0,7],
+                [500,1000,0,7],
+                [600,1200,0,7],
+                [800,1600,0,7],
+                [-2,-1,0,8],
+                [1000,2000,2000,7],
+                [2000,4000,4000,7],
+                [4000,8000,8000,7],
+                [5000,10000,10000,7],
+                [6000,12000,12000,7],
+                [8000,16000,16000,7],
+                [-2,-1,0,8],
+                [10000,20000,20000,7],
+                [20000,40000,40000,7],
+                [30000,60000,60000,7],
+                [40000,80000,80000,7],
+                [50000,100000,100000,7],
+                [60000,120000,120000,7],
+                [-2,-1,0,8],
+                [70000,140000,140000,7],
+                [80000,160000,160000,7],
+                [100000,200000,200000,7],
+                [200000,400000,400000,7]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"10장 엑시스 티켓"},
+                {"title":"경기방식", "text":"리엔트리 , 애드온"},
+                {"title":"최대 엔트리", "text":"40"},
+                {"title":"블라인드", "text":"10분"},
+                {"title":"레지마감", "text":"2break"},
+                {"title":"스타팅 칩(사전예약자 )", "text":"70,000"},
+                {"title":"1리엔트리", "text":"80,000"},
+                {"title":"2리엔트리", "text":"100,000"},
+                {"title":"애드온", "text":"180,000"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
+            ]
+        },
+        {
+            "name":"10만 80%",
+            "display_name":"10만 80% 프라이즈",
+            "data":[
                 [100,200,0,8],
                 [200,400,0,8],
                 [400,800,0,8],
@@ -227,45 +273,6 @@
             "giveaway":[
                 {"title":"1등", "text":""},
                 {"title":"2등", "text":""}
-            ]
-        },
-        {
-            "name":"3만 프라이즈 100%",
-            "display_name":"3만 프라이즈 100%",
-            "data":[
-                [100,200,0,8],
-                [200,400,0,8],
-                [400,800,0,8],
-                [500,1000,0,8],
-                [800,1600,0,8],
-                [1000,2000,0,8],
-                [-2,-1,0,10],
-                [2000,4000,2000,8],
-                [4000,8000,4000,8],
-                [5000,10000,5000,8],
-                [8000,16000,8000,8],
-                [10000,20000,10000,8],
-                [20000,40000,20000,8],
-                [30000,60000,30000,8],
-                [-2,-1,0,5],
-                [40000,80000,40000,8],
-                [50000,100000,50000,8],
-                [60000,120000,60000,8],
-                [80000,160000,80000,8],
-                [100000,200000,100000,8]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 3장"},
-                {"title":"리엔트리", "text":"무료참여권 3장"},
-                {"title":"애드온", "text":"무료참여권 3장"},
-                {"title":"최대 엔트리", "text":"20"},
-                {"title":"스타팅 칩", "text":"30,000(+5,000)"},
-                {"title":"리엔트리 칩", "text":"50,000"},
-                {"title":"애드온 칩", "text":"70,000"},
-                {"title":"블라인드", "text":"10분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"프라이즈 50%"}
             ]
         }
     ]
