--- a/config.json
+++ b/config.json
@@ -110,6 +110,42 @@
             ]
         },
         {
+            "name":"이용권 6장 촬영권",
+            "display_name":"액시스 챔피언전",
+            "data":[
+                [100,200,0,7],
+                [200,400,0,7],
+                [400,800,0,7],
+                [600,1200,0,7],
+                [800,1600,0,7],
+                [-2,-1,0,5],
+                [1000,2000,0,7],
+                [2000,4000,0,7],
+                [4000,8000,0,7],
+                [6000,12000,0,7],
+                [8000,16000,0,7],
+                [-2,-1,0,5],
+                [10000,20000,0,7],
+                [20000,40000,0,7],
+                [30000,60000,0,7],
+                [40000,80000,0,7],
+                [50000,100000,0,7]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"촬영권 6장"},
+                {"title":"맥스엔트리", "text":"14"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"1 리엔트리", "text":"60,000"},
+                {"title":"2 리엔트리", "text":"70,000"},
+                {"title":"레지마감", "text":"레벨 11"},
+                {"title":"블라인드", "text":"7분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"AXS 카드 시드권%"},
+                {"title":"2등", "text":"120,000gtd(촬영권)"}
+            ]
+        },
+        {
             "name":"이용권 10장",
             "display_name":"식음료 쿠폰 10장",
             "data":[
