--- a/config.json
+++ b/config.json
@@ -318,48 +318,45 @@
             "name":"AK & 액시스 콜라보 대회",
             "display_name":"AK & 액시스 콜라보 대회",
             "data":[
-                [100,200,0,15],
-                [200,400,0,15],
-                [300,600,0,15],
-                [400,800,0,15],
+                [100,200,0,12],
+                [200,400,0,12],
+                [400,800,0,12],
+                [500,1000,0,12],
                 [-2,-1,0,5],
-                [500,1000,0,15],
-                [600,1200,0,15],
-                [800,1600,0,15],
-                [1000,2000,2000,15],
+                [600,1200,0,12],
+                [800,1600,0,12],
+                [1000,2000,1000,12],
+                [2000,4000,2000,12],
                 [-2,-1,0,5],
-                [2000,4000,4000,15],
-                [3000,6000,6000,15],
-                [4000,8000,8000,15],
-                [5000,10000,10000,15],
+                [4000,8000,4000,12],
+                [5000,10000,5000,12],
+                [6000,12000,6000,12],
+                [8000,16000,8000,12],
                 [-2,-1,0,15],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
-                [10000,20000,20000,10],
-                [20000,40000,40000,10],
-                [30000,60000,60000,10],
-                [40000,80000,80000,10],
-                [-2,-1,0,5],
-                [50000,100000,100000,10],
-                [60000,120000,120000,10],
-                [70000,140000,140000,10],
-                [80000,160000,160000,10],
-                [100000,200000,200000,10],
-                [-2,-1,0,5],
-                [150000,300000,300000,10],
-                [200000,400000,400000,10],
-                [300000,600000,600000,10]
+                [10000,20000,10000,10],
+                [20000,40000,20000,10],
+                [30000,60000,30000,10],
+                [40000,80000,40000,10],
+                [50000,100000,50000,10],
+                [60000,120000,60000,10],
+                [-2,-1,0,8],
+                [70000,140000,70000,10],
+                [80000,160000,80000,10],
+                [100000,200000,100000,10],
+                [200000,400000,200000,10],
+                [300000,600000,300000,10],
+                [400000,800000,400000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"10장 엑시스 티켓"},
-                {"title":"경기방식", "text":"리엔트리 , 애드온"},
-                {"title":"최대 엔트리", "text":"40"},
-                {"title":"블라인드", "text":"10분"},
-                {"title":"레지마감", "text":"2break"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"70,000"},
-                {"title":"1리엔트리", "text":"80,000"},
-                {"title":"2리엔트리", "text":"100,000"},
-                {"title":"애드온", "text":"180,000"}
+                {"title":"참여", "text":"20장 엑시스 티켓"},
+                {"title":"경기방식", "text":"리엔트리"},
+                {"title":"최대 엔트리", "text":"50"},
+                {"title":"블라인드", "text":"12분/10분"},
+                {"title":"레지마감", "text":"3break(13레벨전)"},
+                {"title":"스타팅 칩", "text":"60,000"},
+                {"title":"예약자", "text":"10,000 추가"},
+                {"title":"lv.4이전 참가", "text":"10,000 추가"},
+                {"title":"리엔트리", "text":"100,000"}
             ],
             "giveaway":[
                 {"title":"1등", "text":""},
