--- a/config.json
+++ b/config.json
@@ -160,6 +160,47 @@
             ]
         },
         {
+            "name":"촬영권 5장 7분 스몰엔티",
+            "display_name":"촬영권 5장(80% prize)",
+            "data":[
+                [100,200,0,7],
+                [200,400,0,7],
+                [400,800,0,7],
+                [500,1000,0,7],
+                [600,1200,0,7],
+                [800,1600,0,7],
+                [-2,-1,0,5],
+                [1000,2000,1000,7],
+                [2000,4000,2000,7],
+                [4000,8000,4000,7],
+                [5000,10000,5000,7],
+                [6000,12000,6000,7],
+                [8000,16000,8000,7],
+                [-2,-1,0,5],
+                [10000,20000,10000,7],
+                [20000,40000,20000,7],
+                [30000,60000,30000,7],
+                [40000,80000,40000,7],
+                [50000,100000,50000,7],
+                [60000,120000,60000,7],
+                [80000,160000,80000,7],
+                [100000,200000,100000,7]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"촬영권 5장"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"리엔트리", "text":"70,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
+                {"title":"블라인드", "text":"7분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"400,000 촬영권"},
+                {"title":"2등", "text":"100,000 촬영권"},
+                {"title":"3등", "text":"60,000 촬영권"}
+            ]
+        },
+        {
             "name":"촬영권 5장 8분",
             "display_name":"촬영권 5장(80% prize)",
             "data":[
@@ -182,6 +223,48 @@
                 [30000,60000,0,8],
                 [40000,80000,0,8],
                 [50000,100000,0,8],
+                [60000,120000,60000,8],
+                [70000,140000,70000,8],
+                [80000,160000,80000,8],
+                [100000,200000,100000,8]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"촬영권 5장"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"리엔트리", "text":"70,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
+                {"title":"블라인드", "text":"8분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"400,000 촬영권"},
+                {"title":"2등", "text":"100,000 촬영권"},
+                {"title":"3등", "text":"60,000 촬영권"}
+            ]
+        },
+        {
+            "name":"촬영권 5장 8분 스몰엔티",
+            "display_name":"촬영권 5장(80% prize)",
+            "data":[
+                [100,200,0,8],
+                [200,400,0,8],
+                [400,800,0,8],
+                [500,1000,0,8],
+                [600,1200,0,8],
+                [800,1600,0,8],
+                [-2,-1,0,5],
+                [1000,2000,1000,8],
+                [2000,4000,2000,8],
+                [4000,8000,4000,8],
+                [5000,10000,5000,8],
+                [6000,12000,6000,8],
+                [8000,16000,8000,8],
+                [-2,-1,0,5],
+                [10000,20000,10000,8],
+                [20000,40000,20000,8],
+                [30000,60000,30000,8],
+                [40000,80000,40000,8],
+                [50000,100000,50000,8],
                 [60000,120000,60000,8],
                 [70000,140000,70000,8],
                 [80000,160000,80000,8],
