--- a/config.json
+++ b/config.json
@@ -12,12 +12,10 @@
                 [200,400,0,5],
                 [400,800,0,5],
                 [500,1000,0,5],
-                [-2,-1,0,5],
                 [1000,2000,0,5],
                 [2000,4000,0,5],
                 [4000,8000,0,5],
                 [5000,10000,0,5],
-                [-2,-1,0,5],
                 [10000,20000,0,5],
                 [20000,40000,0,5],
                 [30000,60000,0,5],
@@ -43,12 +41,10 @@
                 [200,400,0,5],
                 [400,800,0,5],
                 [500,1000,0,5],
-                [-2,-1,0,5],
                 [1000,2000,0,5],
                 [2000,4000,0,5],
                 [4000,8000,0,5],
                 [5000,10000,0,5],
-                [-2,-1,0,5],
                 [10000,20000,0,5],
                 [20000,40000,0,5],
                 [30000,60000,0,5],
@@ -192,7 +188,7 @@
             ]
         },
         {
-            "name":"촬영권 10장 8분",
+            "name":"촬영권 10장 8분 스몰엔티",
             "display_name":"촬영권 10장(80% prize)",
             "data":[
                 [100,200,0,8],
@@ -202,18 +198,18 @@
                 [600,1200,0,8],
                 [800,1600,0,8],
                 [-2,-1,0,5],
-                [1000,2000,0,8],
-                [2000,4000,0,8],
-                [4000,8000,0,8],
-                [5000,10000,0,8],
-                [6000,12000,0,8],
-                [8000,16000,0,8],
+                [1000,2000,1000,8],
+                [2000,4000,2000,8],
+                [4000,8000,4000,8],
+                [5000,10000,5000,8],
+                [6000,12000,6000,8],
+                [8000,16000,8000,8],
                 [-2,-1,0,5],
-                [10000,20000,0,8],
-                [20000,40000,0,8],
-                [30000,60000,0,8],
-                [40000,80000,0,8],
-                [50000,100000,0,8],
+                [10000,20000,10000,8],
+                [20000,40000,20000,8],
+                [30000,60000,30000,8],
+                [40000,80000,40000,8],
+                [50000,100000,50000,8],
                 [60000,120000,60000,8],
                 [70000,140000,70000,8],
                 [80000,160000,80000,8],
