--- a/config.json
+++ b/config.json
@@ -5,35 +5,6 @@
     ],
     "structures":[
         {
-            "name":"무료토너",
-            "display_name":"무료토너!!!!",
-            "data":[
-                [100,200,0,5],
-                [200,400,0,5],
-                [400,800,0,5],
-                [500,1000,0,5],
-                [1000,2000,0,5],
-                [2000,4000,0,5],
-                [4000,8000,0,5],
-                [5000,10000,0,5],
-                [10000,20000,0,5],
-                [20000,40000,0,5],
-                [30000,60000,0,5],
-                [40000,80000,0,5],
-                [50000,100000,0,5]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"바이인 : 무료"},
-                {"title":"스타팅 칩", "text":"10,000"},
-                {"title":"얼리 칩", "text":"5,000"},
-                {"title":"블라인드", "text":"5분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"월챔 쟁탈전 참가권 1장"},
-                {"title":"2등", "text":"3만 바인권"}
-            ]
-        },
-        {
             "name":"만원의 행복 1장 촬영권",
             "display_name":"만원의 행복 100% prize",
             "data":[
@@ -64,32 +35,31 @@
             ]
         },
         {
-            "name":"촬영권 3장 6분 블라인드",
-            "display_name":"촬영권 3장(70% prize)",
+            "name":"5분 스몰엔티",
+            "display_name":"액시스 스튜디오 촬영중",
             "data":[
-                [100,200,0,6],
-                [200,400,0,6],
-                [400,800,0,6],
-                [500,1000,0,6],
-                [600,1200,0,6],
-                [800,1600,0,6],
+                [100,200,0,5],
+                [200,400,0,5],
+                [400,800,0,5],
+                [500,1000,0,5],
+                [600,1200,0,5],
+                [800,1600,0,5],
+                [1000,2000,1000,5],
+                [2000,4000,2000,5],
+                [4000,8000,4000,5],
+                [5000,10000,5000,5],
+                [6000,12000,6000,5],
+                [8000,16000,8000,5],
                 [-2,-1,0,5],
-                [1000,2000,0,6],
-                [2000,4000,0,6],
-                [4000,8000,0,6],
-                [5000,10000,0,6],
-                [6000,12000,0,6],
-                [8000,16000,0,6],
-                [-2,-1,0,5],
-                [10000,20000,0,6],
-                [20000,40000,0,6],
-                [30000,60000,0,6],
-                [40000,80000,0,6],
-                [50000,100000,0,6],
-                [60000,120000,60000,6],
-                [70000,140000,70000,6],
-                [80000,160000,80000,6],
-                [100000,200000,100000,6]
+                [10000,20000,10000,5],
+                [20000,40000,20000,5],
+                [30000,60000,30000,5],
+                [40000,80000,40000,5],
+                [50000,100000,50000,5],
+                [60000,120000,60000,5],
+                [70000,140000,70000,5],
+                [80000,160000,80000,5],
+                [100000,200000,100000,5]
             ],
             "game_options":[
                 {"title":"참여", "text":"촬영권 3장"},
@@ -105,8 +75,47 @@
             ]
         },
         {
-            "name":"촬영권 5장 7분 스몰엔티",
-            "display_name":"촬영권 5장(80% prize)",
+            "name":"6분 스몰엔티",
+            "display_name":"액시스 스튜디오 촬영중",
+            "data":[
+                [100,200,0,6],
+                [200,400,0,6],
+                [400,800,0,6],
+                [500,1000,0,6],
+                [600,1200,0,6],
+                [800,1600,0,6],
+                [-2,-1,0,5],
+                [1000,2000,1000,6],
+                [2000,4000,2000,6],
+                [4000,8000,4000,6],
+                [5000,10000,5000,6],
+                [6000,12000,6000,6],
+                [8000,16000,8000,6],
+                [-2,-1,0,5],
+                [10000,20000,10000,6],
+                [20000,40000,20000,6],
+                [30000,60000,30000,6],
+                [40000,80000,40000,6],
+                [50000,100000,50000,6],
+                [60000,120000,60000,6],
+                [70000,140000,70000,6],
+                [80000,160000,80000,6],
+                [100000,200000,100000,6]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"촬영권 3장"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"스타팅칩", "text":"30,000"},
+                {"title":"리엔트리", "text":"50,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
+                {"title":"블라인드", "text":"6분"}
+            ],
+            "giveaway":[
+            ]
+        },
+        {
+            "name":"7분 스몰엔티",
+            "display_name":"액시스 스튜디오 촬영중",
             "data":[
                 [100,200,0,7],
                 [200,400,0,7],
@@ -140,14 +149,11 @@
                 {"title":"블라인드", "text":"7분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"400,000 촬영권"},
-                {"title":"2등", "text":"100,000 촬영권"},
-                {"title":"3등", "text":"60,000 촬영권"}
             ]
         },
         {
-            "name":"촬영권 5장 8분 스몰엔티",
-            "display_name":"촬영권 5장(80% prize)",
+            "name":"8분 스몰엔티",
+            "display_name":"액시스 스튜디오 촬영중",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -182,51 +188,74 @@
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"400,000 촬영권"},
-                {"title":"2등", "text":"100,000 촬영권"},
-                {"title":"3등", "text":"60,000 촬영권"}
             ]
         },
         {
-            "name":"촬영권 10장 8분 스몰엔티",
-            "display_name":"촬영권 10장(80% prize)",
+            "name":"10분 스몰엔티",
+            "display_name":"액시스 스튜디오 촬영중",
             "data":[
-                [100,200,0,8],
-                [200,400,0,8],
-                [400,800,0,8],
-                [500,1000,0,8],
-                [600,1200,0,8],
-                [800,1600,0,8],
+                [100,200,0,10],
+                [200,400,0,10],
+                [400,800,0,10],
+                [500,1000,0,10],
+                [600,1200,0,10],
+                [800,1600,0,10],
                 [-2,-1,0,5],
-                [1000,2000,1000,8],
-                [2000,4000,2000,8],
-                [4000,8000,4000,8],
-                [5000,10000,5000,8],
-                [6000,12000,6000,8],
-                [8000,16000,8000,8],
+                [1000,2000,1000,10],
+                [2000,4000,2000,10],
+                [4000,8000,4000,10],
+                [5000,10000,5000,10],
+                [6000,12000,6000,10],
+                [8000,16000,8000,10],
                 [-2,-1,0,5],
-                [10000,20000,10000,8],
-                [20000,40000,20000,8],
-                [30000,60000,30000,8],
-                [40000,80000,40000,8],
-                [50000,100000,50000,8],
-                [60000,120000,60000,8],
-                [70000,140000,70000,8],
-                [80000,160000,80000,8],
-                [100000,200000,100000,8]
+                [10000,20000,10000,10],
+                [20000,40000,20000,10],
+                [30000,60000,30000,10],
+                [40000,80000,40000,10],
+                [50000,100000,50000,10],
+                [60000,120000,60000,10],
+                [70000,140000,70000,10],
+                [80000,160000,80000,10],
+                [100000,200000,100000,10]
             ],
             "game_options":[
                 {"title":"참여", "text":"촬영권 10장"},
                 {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅칩", "text":"80,000"},
+                {"title":"스타팅칩", "text":"70,000"},
                 {"title":"리엔트리", "text":"100,000"},
                 {"title":"레지마감", "text":"2break(13레벨)"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"700,000 촬영권"},
-                {"title":"2등", "text":"300,000 촬영권"},
-                {"title":"3등", "text":"120,000 촬영권"}
+            ]
+        },
+        {
+            "name":"10분 하이롤러 터보",
+            "display_name":"액시스 스튜디오 촬영중",
+            "data":[
+                [1000,2000,1000,10],
+                [2000,4000,2000,10],
+                [4000,8000,4000,10],
+                [5000,10000,5000,10],
+                [6000,12000,6000,10],
+                [8000,16000,8000,10],
+                [-2,-1,0,5],
+                [10000,20000,10000,10],
+                [20000,40000,20000,10],
+                [30000,60000,30000,10],
+                [40000,80000,40000,10],
+                [50000,100000,50000,10],
+                [60000,120000,60000,10],
+                [-2,-1,0,5],
+                [70000,140000,70000,10],
+                [80000,160000,80000,10],
+                [100000,200000,100000,10],
+                [200000,400000,200000,10],
+                [300000,600000,300000,10]
+            ],
+            "game_options":[
+            ],
+            "giveaway":[
             ]
         },
         {
